# tiny-engine

./: .gitignore  .gitmodules  CMakeLists.txt  TODO.md  main.cpp
.VSCodeCounter/2024-04-30_02-15-19/: details.md  diff-details.md  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
.VSCodeCounter/2024-05-01_15-15-43/: details.md  diff-details.md  diff.csv  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
resources/: Shader参数说明.md  transport.txt
resources/shaders/: normal.frag  normal.vert  skybox.frag  skybox.vert
resources/shaders/bake/: bake.frag
resources/shaders/gbuffer/: gbuffer.frag  gbuffer.vert
resources/shaders/light-gbuffer/: light-gbuffer.frag  light-gbuffer.vert
resources/shaders/light-probe/: light-probe.frag  light-probe.vert
resources/shaders/post-process/: post-process.frag  post-process.vert
resources/shaders/prt/: prt.frag  prt.vert
resources/shaders/skybox/: skybox.vert
resources/texture/CornellBox/: light.txt
resources/texture/GraceCathedral/: light.txt
resources/texture/Indoor/: light.txt
resources/texture/Test/: light.txt
resources/texture/skybox/: light.txt
resources/tools/: add_normal_to_obj.py  calc_obj_info.py
src/: camera.h  debug.cpp  debug.h  fbo.h  harmonics.cpp  harmonics.h  imgui_manager.cpp  imgui_manager.h  light.h  main.cpp  model.cpp  model.h  model_object.cpp  model_object.h  probe.cpp  probe.h  sample.h  shader.h  shader_library.cpp  shader_library.h  skybox.h  texture_loader.h  utils.cpp  utils.h
随记/: 半透明物体渲染.md  带宽.md
(+46 files in other folders)
